--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,34 @@
 asttokens==2.4.1
 attrs==23.2.0
+blinker==1.7.0
+Brotli==1.1.0
 certifi==2024.6.2        
 cffi==1.16.0
 charset-normalizer==3.3.2
 colorama==0.4.6
 comm==0.2.2
+cryptography==43.0.0     
 debugpy==1.8.2
 decorator==5.1.1
+et-xmlfile==1.1.0        
 executing==2.0.1
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1        
 idna==3.7
-ipykernel==6.29.4        
+ipykernel==6.29.4
 ipython==8.26.0
 jedi==0.19.1
-jupyter_client==8.6.2    
-jupyter_core==5.7.2      
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kaitaistruct==0.10
 lxml==5.2.2
-matplotlib-inline==0.1.7 
-nest-asyncio==1.6.0      
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
 numpy==2.0.0
-outcome==1.3.0.post0     
+openpyxl==3.1.5
+outcome==1.3.0.post0
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
@@ -27,8 +36,12 @@ platformdirs==4.2.2
 prompt_toolkit==3.0.47
 psutil==6.0.0
 pure-eval==0.2.2
+pyasn1==0.6.0
 pycparser==2.22
+pydivert==2.1.0
 Pygments==2.18.0
+pyOpenSSL==24.2.1
+pyparsing==3.1.2
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -37,6 +50,8 @@ pywin32==306
 pyzmq==26.0.3
 requests==2.32.3
 selenium==4.22.0
+selenium-wire==5.1.0
+setuptools==72.2.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -52,3 +67,4 @@ wcwidth==0.2.13
 webdriver-manager==4.0.1
 websocket-client==1.8.0
 wsproto==1.2.0
+zstandard==0.23.0
